SeggerRTT now working

--- a/examples/triceDemo_NUCLEO-F030RB_LL_SeggerRTT_MDK-ARM/MDK-ARM/JLinkSettings.ini
+++ b/examples/triceDemo_NUCLEO-F030RB_LL_SeggerRTT_MDK-ARM/MDK-ARM/JLinkSettings.ini
@@ -23,7 +23,7 @@ VerifyDownload = 1
 AllowCaching = 1
 EnableFlashDL = 2
 Override = 1
-Device="STM32F070RB (allow opt. bytes)"
+Device="STM32F030R8 (allow opt. bytes)"
 [GENERAL]
 WorkRAMSize = 0x00
 WorkRAMAddr = 0x00
