--- a/test/triceDemo_NUCLEO-F030RB_LL_SeggerRTT_MDK-ARM/MDK-ARM/triceDemo_NUCLEO-F030RB_LL_SeggerRTT_MDK-ARM.uvprojx
+++ b/test/triceDemo_NUCLEO-F030RB_LL_SeggerRTT_MDK-ARM/MDK-ARM/triceDemo_NUCLEO-F030RB_LL_SeggerRTT_MDK-ARM.uvprojx
@@ -72,7 +72,7 @@
           <BeforeMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -src .. -src ../../../srcTrice.C -list ../../til.json -v</UserProg1Name>
+            <UserProg1Name>trice u -src .. -src ../../../srcTrice.C -list ../../til.json</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
