--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -66,7 +66,24 @@
             "env": {},
             "args": [
             ]
-        },               {
+        },              
+        {
+            "name": "Launch trice log -device",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["log",
+                     "-device",
+                     "SIM",
+                     "-list",
+                     "C:/GitRepos/trice/test/til.json",
+                     "-key",
+                     "none"
+            ]
+        },
+        {
             "name": "Launch trice log -port",
             "type": "go",
             "request": "launch",
@@ -75,11 +92,11 @@
             "env": {},
             "args": ["log",
                      "-port",
-                     "COM23",
+                     "COM7",
                      "-baud",
                      "115200",
                      "-list",
-                     "C:/GitRepos/trice/examples/til.json",
+                     "C:/GitRepos/trice/test/til.json",
                      "-key",
                      "none"
             ]
