--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             ]
         },
         {
-            "name": "Launch trice help",
+            "name": "trice help",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -44,7 +44,7 @@
             "env": {},
             "args": ["ds",
                     "-lf",
-                    "C:/GitRepos/trice/pkg/disp/testdata/serverMutexTest.log"
+                    "${workspaceFolder}/pkg/disp/testdata/serverMutexTest.log"
             ]
         },
         {
@@ -68,7 +68,7 @@
             ]
         },              
         {
-            "name": "Launch trice log -device",
+            "name": "-device",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -76,9 +76,9 @@
             "env": {},
             "args": ["log",
                      "-device",
-                     "SIM",
+                     "HTTP",
                      "-list",
-                     "C:/GitRepos/trice/test/til.json",
+                     "${workspaceFolder}/test/til.json",
                      "-key",
                      "none"
             ]
@@ -96,7 +96,7 @@
                      "-baud",
                      "115200",
                      "-list",
-                     "C:/GitRepos/trice/test/til.json",
+                     "${workspaceFolder}/test/til.json",
                      "-key",
                      "none"
             ]
@@ -114,7 +114,7 @@
                      "-baud",
                      "115200",
                      "-list",
-                     "C:/GitRepos/trice/examples/til.json",
+                     "${workspaceFolder}/examples/til.json",
                      "-key",
                      "none"
             ]
@@ -132,7 +132,7 @@
                      "-baud",
                      "115200",
                      "-list",
-                     "C:/GitRepos/trice/examples/til.json",
+                     "${workspaceFolder}/examples/til.json",
                      "-key",
                      "none"
             ]
@@ -146,7 +146,7 @@
             "env": {},
             "args": ["check",
                      "-list",
-                     "C:/GitRepos/trice/examples/til.json",
+                     "${workspaceFolder}/examples/til.json",
                      "-dataset",
                      "xxx"
             ]
@@ -161,9 +161,9 @@
             "args": ["update",
                     "-v",
                     "-src",
-                    "C:/GitRepos/BTdev/STM32",
+                    "C:/repos/BTdev/STM32",
                     "-list",
-                    "c:/GitRepos/BTdev/til.json"
+                    "c:/repos/BTdev/til.json"
             ]
         }
     ]
