--- a/test/TASKING_GenericSTMF030R8_RTT/.cproject
+++ b/test/TASKING_GenericSTMF030R8_RTT/.cproject
@@ -130,4 +130,5 @@
 			<content-type-mapping configuration="" content-type="org.eclipse.cdt.core.cxxSource" language="com.tasking.arm.cpplanguage"/>
 		</project-mappings>
 	</storageModule>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
