--- a/test/TASKING_RTTD_cpp_Example/.project
+++ b/test/TASKING_RTTD_cpp_Example/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cpp</name>
+	<name>TASKING_RTTD_cpp_Example</name>
 	<comment></comment>
 	<projects>
 	</projects>
