--- a/test/MDK-ARM_LL_RTTD_NUCLEO-F030R8/MDK-ARM/JLinkSettings.ini
+++ b/test/MDK-ARM_LL_RTTD_NUCLEO-F030R8/MDK-ARM/JLinkSettings.ini
@@ -22,8 +22,8 @@ SkipProgOnCRCMatch = 1
 VerifyDownload = 1
 AllowCaching = 1
 EnableFlashDL = 2
-Override = 0
-Device="ARM7"
+Override = 1
+Device="STM32F030R8 (allow opt. bytes)"
 [GENERAL]
 WorkRAMSize = 0x00
 WorkRAMAddr = 0x00
